--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
- <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-162389133-1');
-</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
 <meta name="author" content="Pedro Costa">
+<title>COVID-19 Mangualde</title>
+<link rel="icon" type="imagem/png" href="stay-home.png">
 <link rel="stylesheet" href="bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -23,7 +16,7 @@
 
     <nav class="menu navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="index.html">COVID-19 Mangualde</a>
+          <a class="navbar-brand" href="index.html"><img src="stay-home-2.png" style="width: 30px; margin-right: 5px;">COVID-19 Mangualde</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,7 +26,7 @@
                 <a class="nav-link" href="farmacias.html">Farmácias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="supermercados.html">Mercados</a>
+                <a class="nav-link" href="supermercados.html">Bens Alimentares</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link" href="restaurantes.html">Take-Away</a>
@@ -42,10 +35,7 @@
                 <a class="nav-link" href="servicos.html">Serviços</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="contactos.html">Contactos</a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="info.html"><i class="fas fa-info-circle" aria-hidden="true"></i></a>
+                <a class="nav-link" href="info.html">Contacto</a>
               </li>
     
             </ul>
@@ -61,8 +51,18 @@
   </div>
   -->
       <div class="container" style="margin-top: 90px;">
-<img class="image" src="mangualde.jpg" style="margin-bottom:20px;">
+<img class="image" src="mangualde.jpg" style="margin-bottom:20px; width:100%;">
     
+<div class=" justify-content-center align-items-center row">
+  <div class="col-md-12 mb-5">
+    <div class="card h-100">
+      <div class="card-body">
+        <h4 class="card-title" style="font-weight: bold; text-align: center;">Número de casos no Concelho de Mangualde <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
+        <p class="card-text" style="text-align: center; font-size:30px;"><b>1</b></p>
+      </div>
+    </div>
+  </div>
+</div>
         <div class="row" style="font-size: 18px;">
           <div class="col-md-3 mb-5">
             <div class="card h-100">
@@ -78,8 +78,8 @@
           <div class="col-md-3 mb-5">
             <div class="card h-100">
               <div class="card-body">
-                <h4 class="card-title" style="font-weight: bold;">Mercados <i class="fas fa-shopping-cart" aria-hidden="true"></i></h4>
-                <p class="card-text">Supermercados ativos no concelho, contactos, horários e localização.</p>
+                <h4 class="card-title" style="font-weight: bold;">Bens alimentares <i class="fas fa-shopping-cart" aria-hidden="true"></i></h4>
+                <p class="card-text">Supermercados e outros serviços de venda de bens alimenares ativos no concelho, contactos, horários e localização.</p>
               </div>
               <div class="card-footer">
                 <a href="supermercados.html" class="info btn btn-sm">Mais Informações</a>
@@ -110,6 +110,11 @@
           </div>
         </div>
       </div>
+      <footer class="py-5 bg-dark">
+        <div class="container">
+          <p class="m-0 text-center text-white">Copyright © <a href="https://www.linkedin.com/in/pedro-costa-19871919b/">Pedro Costa</a> 2020</p>
+        </div>
+      </footer>
 <!--Scripts-->
 <script src="jquery.js"></script>
 <script src="bootstrap.min.js"></script>
