--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Pedro Costa">
 <title>COVID-19 Mangualde</title>
 <link rel="icon" type="imagem/png" href="stay-home.png">
-<link rel="stylesheet" href="bootstrap.min.css">
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
