--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <title>COVID-19 Mangualde</title>
 <link rel="icon" type="imagem/png" href="stay-home.png">
 <link rel="stylesheet" href="bootstrap.min.css">
+ <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
