--- a/farmacias.html
+++ b/farmacias.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
   
-    <div class="container"  style="margin-top:90px;">
+ <div class="container"  style="margin-top:90px;">
       <div class="card text-white bg-danger  my-5 py-4 text-center">
         <div class="card-body"  style="padding:3px;">
           <p class="text-white m-0" style="font-size: 40px; margin-top: 20px;padding:10px;">Farmácias <i class="fas fa-clinic-medical" aria-hidden="true"></i></p>
@@ -52,15 +52,47 @@
       </div>
       <h2 style="font-weight: bold; text-align: center;">Farmácias de Serviço</h2>
       <div class="justify-content-center align-items-center row">
-      <div class="col-md-4 mb-5">
+        <!--Farmácia de Serviço-->
+      <div class="col-md-6 mb-5">
         <div class="card">
           <div class="card-body">
-            <p class="card-text ">
-                <iframe src="//farmaciasdeservico.net/widget/?localidade=viseu%7Cmangualde&cor_fundo=%23FFFFFF&cor_titulo=%23000000&cor_texto=%23333333&margem=10&v=1" width="100%" height="270px" frameborder="0" target="_top"></iframe>
-            </p>
+            <h3 class="card-title">Farmácia Feliz</h3>
+            <p class="card-text">
+                </p><ul>
+                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622238"> 232622238</a></li>
+                  <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/Feliz.Farmacia"> Facebook</a></li>
+                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/xQPTNjQjvmhdUztLA"> Mangualde</a></li>
+                    <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                        <ul> 
+                            <li><b>Seg-Dom:</b> 8h30m - 20h</li>
+                        </ul>
+                    </li>
+                </ul>
+            <p></p>
           </div>
         </div>
       </div>
+      <!--Farmácia Beirão (serviço)-->
+      <div class="col-md-6 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h3 class="card-title">Farmácia Beirão</h3>
+            <p class="card-text">
+                </p><ul>
+                  <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232651339"> 232651339</a></li>
+                    <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/K62M5e9trFbUAM4t8"> Chãs de Tavares</a></li>
+                    <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                        <ul> 
+                          <li><b>Seg-Sex:</b> 9h - 20h</li>
+                          <li><b>Sáb:</b> 9h- 19h</li>
+                        </ul>
+                    </li>
+                </ul>
+            <p></p>
+          </div>
+        </div>
+    </div>
+    <!--Fim da row-->
       </div> 
       <h2 style="font-weight: bold;">Mangualde</h2>
       <hr>
