--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <div class=" justify-content-center align-items-center row">
   <div class="col-md-12 mb-5">
     <div class="card h-100">
-      <div class="card-body">
-        <h4 class="card-title" style="font-weight: bold; text-align: center;">Número de casos no Concelho de Mangualde <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
-        <p class="card-text" style="text-align: center; font-size:30px;"><b>1</b></p>
+      <div class="card-body bg-danger">
+        <h4 class="card-title" style="font-weight: bold; color:#ffffff; text-align: center;">Número de casos no Concelho de Mangualde <i class="fas fa-clinic-medical" aria-hidden="true"></i></h4>
+        <p class="card-text" style="text-align: center; color:#ffffff; font-size:30px;"><b>1</b></p>
       </div>
     </div>
   </div>
