--- a/farmacias.html
+++ b/farmacias.html
@@ -92,6 +92,7 @@
           </div>
         </div>
     </div>
+        <p><b>Atualizado a 01/04/2020 10:00</b></p>
     <!--Fim da row-->
       </div> 
       <h2 style="font-weight: bold;">Mangualde</h2>
