--- a/farmacias.html
+++ b/farmacias.html
@@ -64,7 +64,8 @@
                     <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/xQPTNjQjvmhdUztLA"> Mangualde</a></li>
                     <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                         <ul> 
-                            <li><b>Seg-Dom:</b> 8h30m - 20h</li>
+                            <li><b>Seg-Sex:</b> 8h30m - 20h</li>
+                          <li><b>Sáb-Dom:</b> 9h - 19h</li>
                         </ul>
                     </li>
                 </ul>
