--- a/restaurantes.html
+++ b/restaurantes.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
     <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-162389133-1');
-</script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
@@ -133,6 +123,28 @@
               </div>
             </div>
           </div>
+
+             <!--Padaria São Miguel-->
+             <div class="col-md-4 mb-5">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h3 class="card-title">Padaria São Miguel - Corvaceira</h3>
+                  <p class="card-text">
+                      </p><ul>
+                        <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:932907651"> 932907651</a></li>
+                        <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/jvUM963jQtmFyf3r6"> Corvaceira</a></li>
+                          <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                              <ul> 
+                                  <li><b>Seg-Dom:</b> 8h - 17h</li>
+                              </ul>
+                          </li>
+                      </ul>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
+          <!--Fim da row-->
 </div>
 <!--Restaurantes-->
 <h2 style="font-weight: bold;">Restaurantes</h2>
@@ -197,6 +209,28 @@
                             </ul>
                         </li>
                         <li><b> Serviço de Take-Away e/ou Entrega ao domicílio</b></li>
+                    </ul>
+                <p></p>
+              </div>
+            </div>
+          </div>  
+
+          <!--Arca dos Caracóis-->
+          <div class="col-md-4 mb-5">
+            <div class="card h-100">
+              <div class="card-body">
+                <h3 class="card-title">Arca dos Caracóis</h3>
+                <p class="card-text">
+                    </p><ul>
+                      <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232613551"> 232613551</a></li>
+                      <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:968715284"> 968715284</a></li>
+                        <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/SeY5KXYQhNsN4drUA"> Mangualde</a></li>
+                        <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                            <ul> 
+                                <li><b>Seg-Dom: 11h-21h</b></li>
+                            </ul>
+                        </li>
+                        <li><b>Entregas ao domicílio</b></li>
                     </ul>
                 <p></p>
               </div>
