--- a/servicos.html
+++ b/servicos.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
     <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-162389133-1');
-</script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
@@ -77,6 +67,7 @@
                     <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                         <ul> 
                            <li><b>Encerrado</b></li>
+                           <li><b>Atendimento por marcação:</b>9h - 15h30m</li>
                         </ul>
                     </li>
                 </ul>
@@ -95,7 +86,7 @@
                     <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/GagfRcep2rkNANKNA"> Mangualde</a></li>
                     <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                         <ul> 
-                           <li><b>Seg-Sex: 8h - 20h</b></li>
+                           <li><b>Seg-Sex:</b> 8h - 20h</li>
                         </ul>
                     </li>
                 </ul>
@@ -114,7 +105,7 @@
                             <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/VAiobDzrbGJLQmbp8"> Mangualde</a></li>
                             <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                 <ul> 
-                                   <li><b>Seg-Dom: 0h - 24h</b></li>
+                                   <li><b>Seg-Dom:</b> 0h - 24h</li>
                                 </ul>
                             </li>
                         </ul>
@@ -132,7 +123,7 @@
                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/uVsp7zDCebWDfXEu8"> Mangualde</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                               <li><b>Seg-Dom: 0h - 24h</b></li>
+                               <li><b>Seg-Dom:</b> 0h - 24h</li>
                             </ul>
                         </li>
                     </ul>
@@ -150,7 +141,7 @@
                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TosVqGTvSGC5TNbf6"> Mangualde</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                               <li><b>Seg-Sex: 9h - 12h30m / 14h30m - 18h</b></li>
+                               <li><b>Seg-Sex:</b> 9h - 12h30m / 14h30m - 18h</li>
                             </ul>
                         </li>
                     </ul>
@@ -294,7 +285,7 @@
                  <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/i3eT3drL8YYmFshz9"> Mangualde</a></li>
                  <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                      <ul> 
-                        <li><b>Seg-Sex: 9h - 20h</b></li>
+                        <li><b>Seg-Dom:</b> 9h - 20h</li>
                      </ul>
                  </li>
              </ul>
@@ -313,7 +304,7 @@
                      <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/i3eT3drL8YYmFshz9"> Mangualde</a></li>
                      <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                          <ul> 
-                            <li><b>Seg-Sex: 9h - 20h</b></li>
+                            <li><b>Seg-Dom:</b> 9h - 20h</li>
                          </ul>
                      </li>
                  </ul>
@@ -344,6 +335,23 @@
                       </div>
                     </div>
                   </div>
+                   <!--Chãs de Tavares-->
+                <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Prio - Chãs de Tavares </h3>
+                          </p><ul>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/m13tqgZMGi5JeyWAA"> Chãs de Tavares</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                     <li><b>Seg-Dom:</b> 7h - 20h</li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
 <!--Fim da row-->
  </div>
  <h2 style="font-weight: bold;">Óticas</h2>
@@ -360,7 +368,7 @@
                                 <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/hRsYLVFVzab1rz1P6"> Mangualde</a></li>
                                 <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                     <ul> 
-                                       <li><b>Seg-Sáb: 10h - 13h</b></li>
+                                       <li><b>Seg-Sáb:</b> 10h - 13h</li>
                                     </ul>
                                 </li>
                             </ul>
