--- a/supermercados.html
+++ b/supermercados.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-162389133-1');
-</script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
@@ -149,7 +139,7 @@
                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/g6AJSA3zownbzVs19"> Mangualde</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                                <li><b>Seg-Dom:</b> 10h - 14h / 16h - 20h</li>
+                                <li><b>Seg-Dom:</b> 9h - 19h</li>
                             </ul>
                         </li>
                     </ul>
@@ -177,6 +167,25 @@
                     </div>
                   </div>
                 </div> 
+               <!--Mercado Chãs Shopping-->
+                <div class="col-md-4 mb-5">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h3 class="card-title">Mercado Chãs Shopping</h3>
+                      <p class="card-text">
+                          </p><ul>
+                            <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/tipao.cashandcarry/"> Facebook</a></li>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Mangualde</a></li>
+                              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                  <ul> 
+                                      <li><b>Seg-Dom:</b> 9h - 20h</li>
+                                  </ul>
+                              </li>
+                          </ul>
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
           <!--Fim da row-->
 </div>
 <!--Talhos-->
@@ -245,7 +254,8 @@
                       <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/BawaMz9idjFHDw4v8">Mercado Muncipal - Mangualde</a></li>
                       <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                           <ul> 
-                              <li><b> Sem Informação</b></li>
+                              <li>Terças e Quinta de manhã</li>
+                              <li>Sexta de tarde</li>
                           </ul>
                       </li>
                       <li><b>Entregas ao domicílio em Mangualde</b></li>
