--- a/farmacias.html
+++ b/farmacias.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162389133-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-162389133-1');
-</script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Website de apoio à comunidade de Mangualde durante a quarentena devido ao vírus COVID-19">
@@ -54,7 +44,7 @@
       </div>
     </nav>
   
- <div class="container"  style="margin-top:90px;">
+    <div class="container"  style="margin-top:90px;">
       <div class="card text-white bg-danger  my-5 py-4 text-center">
         <div class="card-body"  style="padding:3px;">
           <p class="text-white m-0" style="font-size: 40px; margin-top: 20px;padding:10px;">Farmácias <i class="fas fa-clinic-medical" aria-hidden="true"></i></p>
@@ -74,8 +64,7 @@
                     <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/xQPTNjQjvmhdUztLA"> Mangualde</a></li>
                     <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                         <ul> 
-                            <li><b>Seg-Sex:</b> 8h30m - 20h</li>
-                          <li><b>Sáb-Dom:</b> 9h - 19h</li>
+                            <li><b>Seg-Dom:</b> 8h30m - 20h</li>
                         </ul>
                     </li>
                 </ul>
@@ -103,9 +92,10 @@
           </div>
         </div>
     </div>
-        <p><b>Atualizado a 01/04/2020 10:00</b></p>
+    <p><b>Atualizado a 01/04/2020 10:00</b></p>
     <!--Fim da row-->
       </div> 
+      <!--Farmácias Mangualde-->
       <h2 style="font-weight: bold;">Mangualde</h2>
       <hr>
       
@@ -122,8 +112,7 @@
                       <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/xQPTNjQjvmhdUztLA"> Mangualde</a></li>
                       <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                           <ul> 
-                              <li><b>Seg-Sex:</b> 8h30m - 20h</li>
-                            <li><b>Sáb-Dom:</b> 9h - 19h</li>
+                              <li><b>Seg-Dom:</b> 8h30m - 20h</li>
                           </ul>
                       </li>
                   </ul>
