--- a/servicos.html
+++ b/servicos.html
@@ -148,7 +148,27 @@
                 <p></p>
               </div>
             </div>
-          </div>      <!--Fim da row-->
+          </div> 
+    <!--Espaço cidadão chãs-->
+          <div class="col-md-4 mb-5">
+            <div class="card h-100">
+              <div class="card-body">
+                <h3 class="card-title">Espaço Cidadão - Chãs de Tavares </h3>
+                    </p><ul>
+                      <li><i class="fas fa-at" aria-hidden></i><a href="mailto:freguesiadetavares@gmail.com">freguesiadetavares@gmail.com</a></li>
+                        <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                            <ul> 
+                               <li><b>Encerrado</b></li>
+                               
+                            </ul>
+                        </li>
+                        <li><b>Pagamentos de serviço, CTT e apoio ao cidadão</b></li>
+                    </ul>
+                <p></p>
+              </div>
+            </div>
+          </div> 
+    <!--Fim da row-->
       </div>
 <!--Serviços Câmara Municipal de Mangualde-->
       <h2 style="font-weight: bold;">Serviços Câmara Municipal de Mangualde</h2>
