--- a/supermercados.html
+++ b/supermercados.html
@@ -175,7 +175,7 @@
                       <p class="card-text">
                           </p><ul>
                             <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/tipao.cashandcarry/"> Facebook</a></li>
-                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Mangualde</a></li>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Chãs de Tavares</a></li>
                               <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                   <ul> 
                                       <li><b>Seg-Dom:</b> 9h - 20h</li>
