--- a/supermercados.html
+++ b/supermercados.html
@@ -264,7 +264,26 @@
             </div>
           </div>
         </div>
-
+  
+              <!--Frutas Carioca-->
+            <div class="col-md-4 mb-5">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h3 class="card-title">Frutas Carioca</h3>
+                  <p class="card-text">
+                      </p><ul>
+                          <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/1k8Jdyw6r4jqBnKi7"> Mangualde</a></li>
+                          <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                              <ul> 
+                                  <li><b>Seg-Sáb:</b> 9h - 12h30m / 14h30m - 18h30m</li>
+                              </ul>
+                          </li>
+                      </ul>
+                  <p></p>
+                </div>
+              </div>
+            </div>
+<!--Fim da row-->
  </div>
 </div>
       
