--- a/servicos.html
+++ b/servicos.html
@@ -70,7 +70,7 @@
                            
                         </ul>
                     </li>
-              <li><b>Atendimento por marcação:</b>9h - 15h30m</li>
+                    <li><b>Atendimento por marcação:</b> 9h - 15h30m</li>
                 </ul>
             <p></p>
           </div>
@@ -149,27 +149,28 @@
                 <p></p>
               </div>
             </div>
-          </div> 
-    <!--Espaço cidadão chãs-->
+          </div>   
+<!--Espaço cidadão chãs-->
           <div class="col-md-4 mb-5">
             <div class="card h-100">
               <div class="card-body">
-                <h3 class="card-title">Espaço Cidadão - Chãs de Tavares </h3>
+                <h3 class="card-title">Apoio ao Cidadão - Chãs de Tavares </h3>
                     </p><ul>
                       <li><i class="fas fa-at" aria-hidden></i><a href="mailto:freguesiadetavares@gmail.com">freguesiadetavares@gmail.com</a></li>
+                      <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/a9NsUkDNQjnpALns8"> Chãs de Tavares</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                               <li><b>Encerrado</b></li>
+                               <li><b>Seg-Sex:</b> 17h - 19h</li>
                                
                             </ul>
                         </li>
-                        <li><b>Pagamentos de serviço, CTT e apoio ao cidadão</b></li>
+                        <li><b>Pagamentos de serviço, CTT, IRS, IMI, Selo do Carro e Segurança Social</b></li>
                     </ul>
                 <p></p>
               </div>
             </div>
-          </div> 
-    <!--Fim da row-->
+          </div>       
+          <!--Fim da row-->
       </div>
 <!--Serviços Câmara Municipal de Mangualde-->
       <h2 style="font-weight: bold;">Serviços Câmara Municipal de Mangualde</h2>
@@ -375,7 +376,7 @@
                 </div>
 <!--Fim da row-->
  </div>
- <h2 style="font-weight: bold;">Óticas</h2>
+<h2 style="font-weight: bold;">Óticas</h2>
  <hr>
  <div class="row" style="font-size: 16px;">
                 <!--MultiÓpticas-->
@@ -399,6 +400,29 @@
                   </div>
 <!--Fim da row-->
  </div>
+ <h2 style="font-weight: bold;">Ervanárias</h2>
+ <hr>
+ <div class="row" style="font-size: 16px;">
+                <!--MultiÓpticas-->
+                <div class="col-md-4 mb-5">
+                    <div class="card h-100">
+                      <div class="card-body">
+                        <h3 class="card-title">Ervanária Mãe Natureza </h3>
+                            </p><ul>
+                                <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232613700"> 232613700  </a></li>
+                                <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/NjdwvN7EETaEQUaAA"> Mangualde</a></li>
+                                <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                                    <ul> 
+                                       <li><b>Seg-Sex:</b> 9h30m - 12h30m / 15h - 18h</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        <p></p>
+                      </div>
+                    </div>
+                  </div>
+<!--Fim da row-->
+ </div> 
 </div> 
 <!---->
     <!-- Footer -->
