--- a/supermercados.html
+++ b/supermercados.html
@@ -175,7 +175,7 @@
                       <p class="card-text">
                           </p><ul>
                             <li><i class="fab fa-facebook" aria-hidden="true"></i><a href="https://www.facebook.com/tipao.cashandcarry/"> Facebook</a></li>
-                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Chãs de Tavares</a></li>
+                              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/TRyvCQSCiMvzjndw7"> Mangualde</a></li>
                               <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                                   <ul> 
                                       <li><b>Seg-Dom:</b> 9h - 20h</li>
@@ -236,6 +236,47 @@
               </div>
             </div>
           </div>
+     <!--Talho Carnextra-->
+     <div class="col-md-4 mb-5">
+      <div class="card h-100">
+        <div class="card-body">
+          <h3 class="card-title">Talho Carnextra</h3>
+          <p class="card-text">
+              </p><ul>
+                <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232613409"> 232613409</a></li>
+                <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/XgTBjpdjX5CfeUXn6"> Mangualde</a></li>
+                  <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                      <ul> 
+                          <li><b>Ter-Sex:</b> 8h30m - 12h30m / 14h30m - 18h30m</li>
+                          <li><b>Sáb:</b> 8h30m - 13h</li>
+                      </ul>
+                  </li>
+              </ul>
+          <p></p>
+        </div>
+      </div>
+    </div>
+   <!--Talho Correia e Martins-->
+   <div class="col-md-4 mb-5">
+    <div class="card h-100">
+      <div class="card-body">
+        <h3 class="card-title">Talho Correia e Martins</h3>
+        <p class="card-text">
+            </p><ul>
+              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/dC8GkpUBy88E6oqw6"> Mangualde</a></li>
+                <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                    <ul> 
+                        <li><b>Ter-Sex:</b> 8h30m - 12h / 14h30m - 18h</li>
+                        <li><b>Sáb:</b> 8h - 12h</li>
+                    </ul>
+                </li>
+            </ul>
+        <p></p>
+      </div>
+    </div>
+  </div>
+
+<!--Fim da row-->
 </div>
 <!--Frutas-->
 <h2 style="font-weight: bold;">Frutas</h2>
@@ -254,7 +295,7 @@
                       <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/BawaMz9idjFHDw4v8">Mercado Muncipal - Mangualde</a></li>
                       <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                           <ul> 
-                              <li>Terças e Quinta de manhã</li>
+                              <li>Terças, Quintas e Sábados de manhã</li>
                               <li>Sexta de tarde</li>
                           </ul>
                       </li>
@@ -264,8 +305,8 @@
             </div>
           </div>
         </div>
-  
-              <!--Frutas Carioca-->
+      
+            <!--Frutas Carioca-->
             <div class="col-md-4 mb-5">
               <div class="card h-100">
                 <div class="card-body">
