--- a/restaurantes.html
+++ b/restaurantes.html
@@ -227,7 +227,7 @@
                         <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/SeY5KXYQhNsN4drUA"> Mangualde</a></li>
                         <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                             <ul> 
-                                <li><b>Seg-Dom:</b> 11h-21h</li>
+                                <li><b>Seg-Dom: 11h-21h</b></li>
                             </ul>
                         </li>
                         <li><b>Entregas ao domicílio</b></li>
