--- a/restaurantes.html
+++ b/restaurantes.html
@@ -143,6 +143,27 @@
                 </div>
               </div>
             </div>
+    
+     <!--Pães da Guarda-->
+             <div class="col-md-4 mb-5">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h3 class="card-title">Venda de Pão - Guarda</h3>
+                  <p class="card-text">
+                      </p><ul>
+                        <li><i class="fas fa-whatsapp" aria-hidden="true"></i> <a href="tel:969639663"> 969639663</a></li>
+                     <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:927619514"> 927619514</a></li>
+                          <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                              <ul> 
+                                  <li><b>Seg-Sex:</b> 8h - 19h</li>
+                              </ul>
+                          </li>
+                    <li><b> Entregas ao domicílio </b> </li>
+                      </ul>
+                  <p></p>
+                </div>
+              </div>
+            </div>
 
           <!--Fim da row-->
 </div>
