--- a/restaurantes.html
+++ b/restaurantes.html
@@ -151,7 +151,7 @@
                   <h3 class="card-title">Venda de Pão - Guarda</h3>
                   <p class="card-text">
                       </p><ul>
-                        <li><i class="fas fa-whatsapp" aria-hidden="true"></i> <a href="tel:969639663"> 969639663</a></li>
+                        <li><i class="fab fa-whatsapp" aria-hidden="true"></i> <a href="tel:969639663"> 969639663</a></li>
                      <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:927619514"> 927619514</a></li>
                           <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
                               <ul> 
