--- a/supermercados.html
+++ b/supermercados.html
@@ -207,6 +207,47 @@
                     </div>
                   </div>
                 </div>
+<!--Minimercado - Quintela de Azurara-->
+<div class="col-md-4 mb-5">
+  <div class="card h-100">
+    <div class="card-body">
+      <h3 class="card-title"> Café Azurara - Quintela de Azurara</h3>
+      <p class="card-text">
+          </p><ul>
+            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232612005"> 232612005</a></li>
+              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/5ti9MZ1HeGiVGgnv8"> Quintela de Azurara</a></li>
+              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                  <ul> 
+                      <li><b>Seg-Sex:</b> 8h - 19h</li>
+                  </ul>
+              </li>
+              <li><b>Minimercado a funcionar</b></li>
+          </ul>
+      <p></p>
+    </div>
+  </div>
+</div>
+
+<!--Minimercado - Quintela de Azurara-->
+<div class="col-md-4 mb-5">
+  <div class="card h-100">
+    <div class="card-body">
+      <h3 class="card-title"> Café Central - Quintela de Azurara</h3>
+      <p class="card-text">
+          </p><ul>
+            <li><i class="fas fa-phone-square-alt" aria-hidden="true"></i> <a href="tel:232622933"> 232622933</a></li>
+              <li><i class="fas fa-map-marked-alt" aria-hidden="true"></i> <a href="https://goo.gl/maps/zKoUJCvMuMpV1tmY6"> Quintela de Azurara</a></li>
+              <li><i class="fas fa-clock" aria-hidden="true"></i> Horário
+                  <ul> 
+                      <li><b>Seg-Sex:</b> 8h - 19h</li>
+                  </ul>
+              </li>
+              <li><b>Minimercado a funcionar</b></li>
+          </ul>
+      <p></p>
+    </div>
+  </div>
+</div>
           <!--Fim da row-->
 </div>
 <!--Talhos-->
