--- a/voluntario.html
+++ b/voluntario.html
@@ -39,8 +39,8 @@
             <li class="nav-item">
               <a class="nav-link" href="info.html">Contacto</a>
             </li>
-            <li class="nav-item active bg-danger" style="border-radius:7px;">
-                <a class="nav-link"  href="voluntario.html">Ser Voluntário</a>
+            <li class="nav-item active bg-danger" id="voluntario" style="border-radius:7px;">
+                <a class="nav-link"  href="voluntario.html" >Ser Voluntário</a>
               </li>
           </ul>
         </div>
